--- a/method_C/visualize-enrichments.Rmd
+++ b/method_C/visualize-enrichments.Rmd
@@ -42,39 +42,72 @@ eqtl_enrich_plot <- function(enrich.df,myname){
     geom_point(size=2,shape=21,aes(fill=-log(pvalue,base=10))) + #,shape=as.factor(threshold))) + 
     facet_wrap(~eQTL+threshold) + 
     theme_bw() + 
+    scale_y_log10(breaks=c(0.5,2,10,50)) +
     #scale_shape_manual(values=c(21,22,23,24),name="Classifer Threshold") +
     scale_fill_gradient2(low=viridis(n=2)[2],high=viridis(n=2)[1],
                          midpoint=-log(0.05,base=10),name=expression(-log10(p))) + 
     xlab("Classified Tissue") + ylab("Enrichment") + 
-    ggtitle(myname) #+ coord_cartesian(ylim=c(0,20))
+    ggtitle(myname) #+ coord_cartesian(ylim=c(0,20)) + 
+  
 }
  
 ```
 
 ```{r}
 
-unweighted.df <- fread(work.dir %&% "analysis_files/eqtl-validation_unweighted.txt")
-weighted.df <- fread(work.dir %&% "analysis_files/eqtl-validation_weighted.txt")
+#unweighted.df <- fread(work.dir %&% "analysis_files/eqtl-validation_unweighted.txt")
+#weighted.df <- fread(work.dir %&% "analysis_files/eqtl-validation_weighted.txt")
 
-plt1 <- eqtl_enrich_plot(unweighted.df,myname="eQTL enrichment for classifed loci (unweighted)")
-ggsave(plot=plt1,filename = plot.dir %&% "enrichment-eqtl_unweighted.png",width=7,height=4)
-plt2 <- eqtl_enrich_plot(weighted.df,myname="eQTL enrichment for classifed loci (weighted)")
-ggsave(plot=plt2,filename = plot.dir %&% "enrichment-eqtl_weighted.png",width=7,height=4)
+#plt1 <- eqtl_enrich_plot(unweighted.df,myname="eQTL enrichment for classifed loci (unweighted)")
+#ggsave(plot=plt1,filename = plot.dir %&% "enrichment-eqtl_unweighted.png",width=7,height=4)
+#plt2 <- eqtl_enrich_plot(weighted.df,myname="eQTL enrichment for classifed loci (weighted)")
+#ggsave(plot=plt2,filename = plot.dir %&% "enrichment-eqtl_weighted.png",width=7,height=4)
 
 ```
 
 
 ```{r}
 
-unweighted.df <- fread(work.dir %&% "analysis_files/eqtl-specific-validation_unweighted.txt")
-weighted.df <- fread(work.dir %&% "analysis_files/eqtl-specific-validation_weighted.txt")
+df1 <- fread(work.dir %&% "analysis_files/eqtl-specific-validation_unweighted.txt")
+df2 <- fread(work.dir %&% "analysis_files/eqtl-specific-validation_weighted.txt")
 
-plt1 <- eqtl_enrich_plot(unweighted.df,myname="eQTL enrichment for classifed loci (unweighted)")
-ggsave(plot=plt1,filename = plot.dir %&% "enrichment-eqtl-specific_unweighted.png",width=7,height=4)
-plt2 <- eqtl_enrich_plot(weighted.df,myname="eQTL enrichment for classifed loci (weighted)")
-ggsave(plot=plt2,filename = plot.dir %&% "enrichment-eqtl-specific_weighted.png",width=7,height=4)
+plt1 <- eqtl_enrich_plot(df1,myname="eQTL enrichment for classifed loci (unweighted)")
+ggsave(plot=plt1,filename = plot.dir %&% "enrichment-eqtl-specific_unweighted.png",width=9,height=6)
+plt2 <- eqtl_enrich_plot(df2,myname="eQTL enrichment for classifed loci (weighted)")
+ggsave(plot=plt2,filename = plot.dir %&% "enrichment-eqtl-specific_weighted.png",width=9,height=6)
+
 
 ```
+
+
+```{r}
+
+df3 <- fread(work.dir %&% "analysis_files/downsampled_eqtl-specific-validation_unweighted.txt")
+df4 <- fread(work.dir %&% "analysis_files/downsampled_eqtl-specific-validation_weighted.txt")
+
+plt3 <- eqtl_enrich_plot(df3,myname="eQTL enrichment for classifed loci (unweighted, downsampled)")
+ggsave(plot=plt3,filename = plot.dir %&% "downsampled_enrichment-eqtl-specific_unweighted.png",width=9,height=6)
+plt4 <- eqtl_enrich_plot(df4,myname="eQTL enrichment for classifed loci (weighted, downsampled)")
+ggsave(plot=plt4,filename = plot.dir %&% "downsampled_enrichment-eqtl-specific_weighted.png",width=9,height=6)
+
+
+```
+
+
+Lookup values 
+
+
+```{r}
+
+#filter(df4,eQTL=="islet")
+#filter(df4,eQTL=="adipose")
+#filter(df4,eQTL=="liver")
+#filter(df4,eQTL=="muscle")
+
+```
+
+
+
 
 
 # ATAC enrichments 
@@ -113,15 +146,60 @@ read_input <- function(readstring="atac-enrichment_unweighted_thresh"){
   return(out.df)
 }
 
-unweighted.df <- read_input("atac-enrichment_unweighted_thresh")
-weighted.df <- read_input("atac-enrichment_weighted_thresh")
+#df5 <- read_input("atac-enrichment_unweighted_thresh")
+#df6 <- read_input("atac-enrichment_weighted_thresh")
 
 
-plt3 <- atac_enrich_plot(unweighted.df,myname="ATAC enrichment for classifed loci (unweighted)")
-ggsave(plot=plt3,filename = plot.dir %&% "enrichment-atac_unweighted.png",width=12,height=8)
-plt4 <- atac_enrich_plot(weighted.df,myname="ATAC enrichment for classifed loci (weighted)")
-ggsave(plot=plt4,filename = plot.dir %&% "enrichment-atac_weighted.png",width=12,height=8)
+#plt5 <- atac_enrich_plot(df5,myname="ATAC enrichment for classifed loci (unweighted)")
+#ggsave(plot=plt5,filename = plot.dir %&% "enrichment-atac_unweighted.png",width=12,height=8)
+#plt6 <- atac_enrich_plot(df6,myname="ATAC enrichment for classifed loci (weighted)")
+#ggsave(plot=plt6,filename = plot.dir %&% "enrichment-atac_weighted.png",width=12,height=8)
 
+
+```
+
+
+```{r}
+
+read_input <- function(readstring="downsample_atac-enrichment_unweighted_thresh"){
+  fvec <- list.files(work.dir %&% "analysis_files/")
+  fvec <- fvec[grepl(readstring,fvec)]
+  out.df <- c()
+  for (f in fvec){
+    threshold <- "0." %&% (strsplit(x=f,split="thresh")[[1]][2] %>% strsplit(.,".",fixed=TRUE))[[1]][1] %>% 
+      as.numeric(.)
+    sub <- fread(work.dir%&%"analysis_files/"%&%f)
+    sub$threshold <- threshold
+    out.df <- rbind(out.df,sub)
+  }
+  return(out.df)
+}
+
+df5 <- read_input("downsample_atac-enrichment_unweighted_thresh")
+df6 <- read_input("downsample_atac-enrichment_weighted_thresh")
+
+
+plt5 <- atac_enrich_plot(df5,myname="ATAC enrichment for classifed loci (unweighted, downsampled)")
+ggsave(plot=plt5,filename = plot.dir %&% "downsampled_enrichment-atac_unweighted.png",width=9,height=6)
+plt6 <- atac_enrich_plot(df6,myname="ATAC enrichment for classifed loci (weighted, downsampled)")
+ggsave(plot=plt6,filename = plot.dir %&% "downsampled_enrichment-atac_weighted.png",width=9,height=6)
+
+
+```
+
+Lookups
+
+```{r}
+
+filter(df5,atac=="adipose",tissue=="adipose")
+filter(df5,atac=="islet",tissue=="islet")
+filter(df5,atac=="liver",tissue=="liver")
+filter(df5,atac=="muscle",tissue=="muscle")
+
+filter(df6,atac=="adipose",tissue=="adipose")
+filter(df6,atac=="islet",tissue=="islet")
+filter(df6,atac=="liver",tissue=="liver")
+filter(df6,atac=="muscle",tissue=="muscle")
 
 ```
 
@@ -155,16 +233,31 @@ mod_thresh <- function(enrich.df){
   return(enrich.df)
 }
 
-unweighted.df <- fread(work.dir %&% "analysis_files/phys-enrich_unweighted.txt") %>% mod_thresh(.)
-weighted.df <- fread(work.dir %&% "analysis_files/phys-enrich_weighted.txt") %>% mod_thresh(.)
+df7 <- fread(work.dir %&% "analysis_files/phys-enrich_unweighted.txt") %>% mod_thresh(.)
+df8 <- fread(work.dir %&% "analysis_files/phys-enrich_weighted.txt") %>% mod_thresh(.)
 
-plt5 <- phys_enrich_plot(unweighted.df,myname="Physiology enrichment for classifed loci (unweighted)")
-ggsave(plot=plt5,filename = plot.dir %&% "enrichment-phys_unweighted.png",width=12,height=8)
-plt6 <- phys_enrich_plot(weighted.df,myname="Physiology enrichment for classifed loci (weighted)")
-ggsave(plot=plt6,filename = plot.dir %&% "enrichment-phys_weighted.png",width=12,height=8)
+plt7 <- phys_enrich_plot(df7,myname="Physiology enrichment for classifed loci (unweighted)")
+ggsave(plot=plt7,filename = plot.dir %&% "enrichment-phys_unweighted.png",width=12,height=5)
+plt8 <- phys_enrich_plot(df8,myname="Physiology enrichment for classifed loci (weighted)")
+ggsave(plot=plt8,filename = plot.dir %&% "enrichment-phys_weighted.png",width=12,height=5)
 
 
 ```
+
+# Lookups 
+
+```{r}
+
+filter(df7,physiology=="BMI-Dys",p<=0.05)
+filter(df7,physiology=="Insulin_Action",p<=0.05)
+filter(df7,physiology=="Insulin_Secretion",p<=0.05)
+
+filter(df8,physiology=="BMI-Dys",p<=0.05)
+filter(df8,physiology=="Insulin_Action",p<=0.05)
+filter(df8,physiology=="Insulin_Secretion",p<=0.05)
+
+```
+
 
 
 ## Version 2 
@@ -184,13 +277,29 @@ phys_enrich_plot_v2 <- function(enrich.df,myname){
     ggtitle(myname)
 }
 
-unweighted.df <- fread(work.dir %&% "analysis_files/phys-enrich-V2_unweighted.txt") 
-weighted.df <- fread(work.dir %&% "analysis_files/phys-enrich-V2_weighted.txt") 
+df9 <- fread(work.dir %&% "analysis_files/phys-enrich-V2_unweighted.txt") 
+df10 <- fread(work.dir %&% "analysis_files/phys-enrich-V2_weighted.txt") 
 
-plt7 <- phys_enrich_plot_v2(unweighted.df,myname="Physiology enrichment for classifed loci (unweighted)")
-ggsave(plot=plt7,filename = plot.dir %&% "enrichment-phys-V2_unweighted.png",width=12,height=5)
-plt8 <- phys_enrich_plot_v2(weighted.df,myname="Physiology enrichment for classifed loci (weighted)")
-ggsave(plot=plt8,filename = plot.dir %&% "enrichment-phys-V2_weighted.png",width=12,height=5)
+plt9 <- phys_enrich_plot_v2(df9,myname="Physiology enrichment for classifed loci (unweighted)")
+ggsave(plot=plt9,filename = plot.dir %&% "enrichment-phys-V2_unweighted.png",width=11,height=4)
+plt10 <- phys_enrich_plot_v2(df10,myname="Physiology enrichment for classifed loci (weighted)")
+ggsave(plot=plt10,filename = plot.dir %&% "enrichment-phys-V2_weighted.png",width=11,height=4)
+
+```
+
+
+Lookups 
+
+
+```{r}
+
+filter(df9,physiology=="BMI-Dys")
+filter(df9,physiology=="Insulin_Action")
+filter(df9,physiology=="Insulin_Secretion")
+
+filter(df10,physiology=="BMI-Dys")
+filter(df10,physiology=="Insulin_Action")
+filter(df10,physiology=="Insulin_Secretion")
 
 ```
 
